//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table users {
  id String [pk]
  name String [not null]
  role Role [not null, default: 'USER']
  password String [not null]
  Competitor competitors [not null]
  Vote votes [not null]
}

Table votes {
  id String [pk]
  userId String [unique, not null]
  competitorId String [unique, not null]
  user users [not null]
  competitor competitors [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
}

Table competitors {
  id String [pk]
  userId String [unique, not null]
  name String [not null]
  email String [not null]
  phone String
  photoUrl String
  semister String [not null, default: '6']
  description String
  isWinner Boolean [not null, default: false]
  voteCount Int [not null, default: 0]
  user users [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  Votes votes [not null]
}

Enum Role {
  USER
  ADMIN
  COMPETITOR
}

Ref: votes.userId > users.id

Ref: votes.competitorId > competitors.id

Ref: competitors.userId > users.id